# weathervane

./: .env.example  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/weathervane/agent/: config.py
src/weathervane/agent/tools/: weather.py
tests/: test_main.py
