[project]
name = "weathervane"
version = "0.1.0"
description = "Local weather + beehive monitoring platform (k8s + Frigate + Open-Meteo)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openmeteo-requests>=1.7.5",
    "paho-mqtt>=2.1.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.uv]
dev-dependencies = ["weathervane[dev]"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "TID"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint]
isort = { known-first-party = ["weathervane"] }

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_config = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=weathervane --cov-report=term-missing"
