[project]
name = "weathervane"
version = "0.2.0"
description = "Agentic environmental intelligence platform — weather, beehives, DJI Neo 2 photogrammetry, Obsidian notes"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]

dependencies = [
    # Core Agent & LangChain ecosystem
    "langgraph>=0.5.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.0",          # fallback / structured output
    "langsmith>=0.2.0",                 # tracing (optional but excellent)

    # LLM serving (local)
    "vllm>=0.6.0",                      # primary inference on 1080Ti
    "openai>=1.60.0",                   # OpenAI-compatible client for vLLM/Ollama

    # Data & DB
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "geoalchemy2>=0.18.0",              # PostGIS support
    "pgvector>=0.3.0",                  # vector embeddings
    "alembic>=1.14.0",                  # migrations

    # Weather & External
    "openmeteo-requests>=1.0.0",
    "httpx>=0.28.0",

    # Drone / Photogrammetry
    "pyodm>=1.5.0",                     # WebODM / OpenDroneMap client

    # GitHub + Notes
    "PyGithub>=2.0.0",

    # MQTT & Events
    "paho-mqtt>=2.1.0",

    # API & Services
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",

    # ML & Vision
    "mlflow>=2.20.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.0",               # YOLO for bearding/hive vision
    "opencv-python-headless>=4.10.0",

    # Utils
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",                    # fallback formatter if needed
    "types-psycopg2",
    "types-pyyaml",
]

[tool.uv]
dev-dependencies = ["weathervane[dev]"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "RUF", "SIM", "TID", "PL", "W"]
fixable = ["ALL"]

[tool.ruff.lint]
isort = { known-first-party = ["weathervane"] }

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=weathervane --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
